--- a/src/main/resources/com/example/passwordhamster/password-generator-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/password-generator-view.fxml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="321.0" prefWidth="422.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="com.example.passwordhamster.HelloController">
+<VBox alignment="CENTER" prefHeight="500.0" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.passwordhamster.PasswordGeneratorController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-
-    <Label fx:id="welcomeText" />
+    <AnchorPane prefHeight="411.0" prefWidth="538.0">
+        <TextField editable="false" layoutX="81.0" layoutY="31.0" prefHeight="26.0" prefWidth="296.0" />
+        <Text layoutX="81.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Generated password:" />
+        <Button layoutX="168.0" layoutY="69.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="122.0" text="Generate" />
+        <Text layoutX="76.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Length" />
+        <CheckBox layoutX="73.0" layoutY="250.0" mnemonicParsing="false" text="Special characters" />
+        <CheckBox layoutX="73.0" layoutY="331.0" mnemonicParsing="false" text="Uppercase and lowercase characters" />
+        <CheckBox layoutX="73.0" layoutY="291.0" mnemonicParsing="false" text="Numbers" />
+        <TextField layoutX="73.0" layoutY="206.0" onInputMethodTextChanged="#onLengthInput" prefHeight="26.0" prefWidth="49.0" />
+      <Button layoutX="205.0" layoutY="111.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="50.0" text="Save" />
+    </AnchorPane>
 </VBox>
