--- a/src/main/resources/com/example/passwordhamster/password-generator-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/password-generator-view.fxml
@@ -15,11 +15,11 @@
     <AnchorPane prefHeight="411.0" prefWidth="538.0">
         <TextField fx:id="generatedPasswordField" editable="false" layoutX="81.0" layoutY="31.0" prefHeight="26.0" prefWidth="296.0" />
         <Text layoutX="81.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Generated password:" />
-        <Button fx:id="generatePasswordButton" layoutX="168.0" layoutY="69.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="122.0" text="Generate" />
+        <Button fx:id="generatePasswordButton" layoutX="168.0" layoutY="69.0" mnemonicParsing="false" onMouseClicked="#onGenerateButtonClick" prefHeight="36.0" prefWidth="122.0" text="Generate" />
         <Text layoutX="76.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Length" />
-        <CheckBox fx:id="shouldPasswordContainSpecialCharactersCheckBox" layoutX="73.0" layoutY="250.0" mnemonicParsing="false" text="Special characters" />
-        <CheckBox fx:id="shouldPasswordContainLowercaseAndUppercaseLettersCheckBox" layoutX="73.0" layoutY="331.0" mnemonicParsing="false" text="Uppercase and lowercase characters" />
-        <CheckBox fx:id="shouldPasswordContainNumbersCheckBox" layoutX="73.0" layoutY="291.0" mnemonicParsing="false" text="Numbers" />
+        <CheckBox fx:id="shouldPasswordContainSpecialCharactersCheckBox" layoutX="73.0" layoutY="250.0" mnemonicParsing="false" text="Special characters can occur" />
+        <CheckBox fx:id="shouldPasswordContainLowercaseAndUppercaseLettersCheckBox" layoutX="73.0" layoutY="331.0" mnemonicParsing="false" text="Uppercase and lowercase characters can occur" />
+        <CheckBox fx:id="shouldPasswordContainNumbersCheckBox" layoutX="73.0" layoutY="291.0" mnemonicParsing="false" text="Numbers can occur" />
         <TextField fx:id="passwordLengthField" layoutX="73.0" layoutY="206.0" onKeyTyped="#onLengthInput" prefHeight="26.0" prefWidth="49.0" />
       <Button fx:id="savePasswordButton" layoutX="205.0" layoutY="111.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="50.0" text="Save" />
       <TextField fx:id="errorTextField" editable="false" layoutX="185.0" layoutY="385.0" prefHeight="26.0" prefWidth="276.0" />
