add new windows

--- a/src/main/resources/com/example/passwordhamster/password-generator-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/password-generator-view.fxml
@@ -12,7 +12,7 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-    <AnchorPane prefHeight="411.0" prefWidth="538.0">
+    <AnchorPane prefHeight="466.0" prefWidth="460.0">
         <TextField fx:id="generatedPasswordField" editable="false" layoutX="81.0" layoutY="31.0" prefHeight="26.0" prefWidth="296.0" />
         <Text layoutX="81.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Generated password:" />
         <Button fx:id="generatePasswordButton" layoutX="168.0" layoutY="69.0" mnemonicParsing="false" onMouseClicked="#onGenerateButtonClick" prefHeight="36.0" prefWidth="122.0" text="Generate" />
@@ -21,7 +21,9 @@
         <CheckBox fx:id="shouldPasswordContainLowercaseAndUppercaseLettersCheckBox" layoutX="73.0" layoutY="331.0" mnemonicParsing="false" text="Uppercase and lowercase characters can occur" />
         <CheckBox fx:id="shouldPasswordContainNumbersCheckBox" layoutX="73.0" layoutY="291.0" mnemonicParsing="false" text="Numbers can occur" />
         <TextField fx:id="passwordLengthField" layoutX="73.0" layoutY="206.0" onKeyTyped="#onLengthInput" prefHeight="26.0" prefWidth="49.0" />
-      <Button fx:id="savePasswordButton" layoutX="205.0" layoutY="111.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="50.0" text="Save" />
-      <TextField fx:id="errorTextField" editable="false" layoutX="185.0" layoutY="385.0" prefHeight="26.0" prefWidth="276.0" />
+      <Button fx:id="savePasswordButton" layoutX="169.0" layoutY="117.0" mnemonicParsing="false" onMouseClicked="#onSavePasswordButtonClick" prefHeight="26.0" prefWidth="122.0" text="Save" />
+      <TextField fx:id="errorTextField" editable="false" layoutX="92.0" layoutY="384.0" prefHeight="26.0" prefWidth="276.0" />
+      <Button fx:id="savedPasswordsButton" layoutX="169.0" layoutY="153.0" mnemonicParsing="false" onMouseClicked="#onSavedPasswordsButtonClick" prefHeight="36.0" prefWidth="122.0" text="Saved passwords" />
+      <Button fx:id="changePasswordButton" layoutX="166.0" layoutY="420.0" mnemonicParsing="false" onMouseClicked="#onChangePasswordButtonClick" prefHeight="26.0" prefWidth="126.0" text="Change password" />
     </AnchorPane>
 </VBox>
