minor fixes, the login window now closes after successful login

--- a/src/main/resources/com/example/passwordhamster/save-password-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/save-password-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane prefHeight="182.0" prefWidth="287.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.passwordhamster.SavePasswordController">
+<AnchorPane prefHeight="182.0" prefWidth="287.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.passwordhamster.controllers.SavePasswordController">
    <children>
       <Text layoutX="80.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ENTER PASSWORD TAG" />
       <TextField layoutX="69.0" layoutY="66.0" />
