--- a/src/main/resources/com/example/passwordhamster/saved-passwords-login-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/saved-passwords-login-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane prefHeight="133.0" prefWidth="277.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.passwordhamster.PasswordGeneratorController">
+<AnchorPane prefHeight="133.0" prefWidth="277.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.passwordhamster.controllers.SavedPasswordsLoginController">
    <children>
       <Button fx:id="savedPasswordsLoginOkButton" layoutX="81.0" layoutY="92.0" mnemonicParsing="false" onMouseClicked="#onSavedPasswordsLoginOkButtonClick" prefHeight="26.0" prefWidth="114.0" text="OK" />
       <TextField fx:id="savedPasswordsLoginPasswordField" layoutX="39.0" layoutY="53.0" prefHeight="26.0" prefWidth="198.0" />
