--- a/src/main/resources/com/example/passwordhamster/saved-passwords-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/saved-passwords-view.fxml
@@ -7,16 +7,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.passwordhamster.controllers.SavedPasswordsController">
    <children>
       <AnchorPane prefHeight="442.0" prefWidth="666.0">
          <children>
             <TextArea fx:id="savedPasswordsTextArea" editable="false" layoutX="31.0" layoutY="32.0" prefHeight="400.0" prefWidth="335.0" />
             <TextField fx:id="passwordToDeleteTextField" layoutX="410.0" layoutY="59.0" prefHeight="26.0" prefWidth="221.0" />
             <Text layoutX="410.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type a password you want to delete" wrappingWidth="194.39999389648438" />
-            <Button fx:id="deletePasswordButton" layoutX="465.0" layoutY="93.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="110.0" text="Delete" />
-            <TextField fx:id="savedPasswordsErrorTextField" layoutX="457.0" layoutY="403.0" prefHeight="26.0" prefWidth="194.0" />
-            <Button fx:id="savedPasswordsBackButton" layoutX="457.0" layoutY="212.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="126.0" text="Back" />
+            <Button fx:id="deletePasswordButton" layoutX="465.0" layoutY="93.0" mnemonicParsing="false" onMouseClicked="#onSavedPasswordsDeleteButtonClick" prefHeight="26.0" prefWidth="110.0" text="Delete" />
+            <TextField fx:id="savedPasswordsErrorTextField" editable="false" layoutX="457.0" layoutY="403.0" prefHeight="26.0" prefWidth="194.0" />
          </children>
       </AnchorPane>
    </children>
