add password changing, prepare to implement passwords saving

--- a/src/main/resources/com/example/passwordhamster/change-password-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/change-password-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="236.0" prefWidth="364.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.passwordhamster.controllers.ChangePasswordController">
+<AnchorPane prefHeight="236.0" prefWidth="364.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.passwordhamster.controller.ChangePasswordController">
    <children>
       <TextField fx:id="changePasswordOldPasswordTextField" layoutX="61.0" layoutY="53.0" prefHeight="26.0" prefWidth="242.0" />
       <TextField fx:id="changePasswordNewPasswordField" layoutX="61.0" layoutY="118.0" prefHeight="26.0" prefWidth="242.0" />
