Passwords are now properly saved, begin code refactoring

--- a/src/main/resources/com/example/passwordhamster/password-generator-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/password-generator-view.fxml
@@ -22,8 +22,10 @@
         <CheckBox fx:id="shouldPasswordContainNumbersCheckBox" layoutX="73.0" layoutY="291.0" mnemonicParsing="false" text="Numbers can occur" />
         <TextField fx:id="passwordLengthField" layoutX="73.0" layoutY="206.0" onKeyTyped="#onLengthInput" prefHeight="26.0" prefWidth="49.0" />
       <Button fx:id="savePasswordButton" layoutX="169.0" layoutY="117.0" mnemonicParsing="false" onMouseClicked="#onSavePasswordButtonClick" prefHeight="26.0" prefWidth="122.0" text="Save" />
-      <TextField fx:id="errorTextField" editable="false" layoutX="92.0" layoutY="384.0" prefHeight="26.0" prefWidth="276.0" />
+      <TextField fx:id="errorTextField" editable="false" layoutX="41.0" layoutY="386.0" prefHeight="26.0" prefWidth="377.0" />
       <Button fx:id="savedPasswordsButton" layoutX="169.0" layoutY="153.0" mnemonicParsing="false" onMouseClicked="#onSavedPasswordsButtonClick" prefHeight="36.0" prefWidth="122.0" text="Saved passwords" />
       <Button fx:id="changePasswordButton" layoutX="166.0" layoutY="420.0" mnemonicParsing="false" onMouseClicked="#onChangePasswordButtonClick" prefHeight="26.0" prefWidth="126.0" text="Change password" />
+      <TextField fx:id="passwordGeneratorTagTextField" layoutX="90.0" layoutY="118.0" prefHeight="26.0" prefWidth="70.0" />
+      <Text layoutX="94.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tag:" />
     </AnchorPane>
 </VBox>
