--- a/src/main/resources/com/example/passwordhamster/save-password-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/save-password-view.fxml
@@ -5,11 +5,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="182.0" prefWidth="287.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.passwordhamster.controller.SavePasswordController">
+<AnchorPane prefHeight="182.0" prefWidth="287.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.passwordhamster.controller.PasswordGeneratorController">
    <children>
       <Text layoutX="80.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ENTER PASSWORD TAG" />
-      <TextField layoutX="69.0" layoutY="66.0" />
+      <TextField fx:id="savePasswordTagTextField" layoutX="69.0" layoutY="66.0" />
       <Button fx:id="savePasswordOkButton" layoutX="104.0" layoutY="120.0" mnemonicParsing="false" onMouseClicked="#onSavePasswordOkButtonClick" prefHeight="26.0" prefWidth="78.0" text="OK" />
    </children>
 </AnchorPane>
