update GUI, fix some bugs

--- a/src/main/resources/com/example/passwordhamster/password-generator-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/password-generator-view.fxml
@@ -12,20 +12,20 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-    <AnchorPane prefHeight="466.0" prefWidth="460.0">
-        <TextField fx:id="generatedPasswordField" editable="false" layoutX="81.0" layoutY="31.0" prefHeight="26.0" prefWidth="296.0" />
-        <Text layoutX="81.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Generated password:" />
-        <Button fx:id="generatePasswordButton" layoutX="168.0" layoutY="69.0" mnemonicParsing="false" onMouseClicked="#onGenerateButtonClick" prefHeight="36.0" prefWidth="122.0" text="Generate" />
-        <Text layoutX="76.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Length" />
-        <CheckBox fx:id="shouldPasswordContainSpecialCharactersCheckBox" layoutX="73.0" layoutY="250.0" mnemonicParsing="false" text="Special characters can occur" />
-        <CheckBox fx:id="shouldPasswordContainLowercaseAndUppercaseLettersCheckBox" layoutX="73.0" layoutY="331.0" mnemonicParsing="false" text="Uppercase and lowercase characters can occur" />
-        <CheckBox fx:id="shouldPasswordContainNumbersCheckBox" layoutX="73.0" layoutY="291.0" mnemonicParsing="false" text="Numbers can occur" />
-        <TextField fx:id="passwordLengthField" layoutX="73.0" layoutY="206.0" onKeyTyped="#onLengthInput" prefHeight="26.0" prefWidth="49.0" />
-      <Button fx:id="savePasswordButton" layoutX="169.0" layoutY="117.0" mnemonicParsing="false" onMouseClicked="#onSavePasswordButtonClick" prefHeight="26.0" prefWidth="122.0" text="Save" />
-      <TextField fx:id="errorTextField" editable="false" layoutX="41.0" layoutY="386.0" prefHeight="26.0" prefWidth="377.0" />
-      <Button fx:id="savedPasswordsButton" layoutX="169.0" layoutY="153.0" mnemonicParsing="false" onMouseClicked="#onSavedPasswordsButtonClick" prefHeight="36.0" prefWidth="122.0" text="Saved passwords" />
-      <Button fx:id="changePasswordButton" layoutX="166.0" layoutY="420.0" mnemonicParsing="false" onMouseClicked="#onChangePasswordButtonClick" prefHeight="26.0" prefWidth="126.0" text="Change password" />
-      <TextField fx:id="passwordGeneratorTagTextField" layoutX="90.0" layoutY="118.0" prefHeight="26.0" prefWidth="70.0" />
-      <Text layoutX="94.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tag:" />
+    <AnchorPane prefHeight="484.0" prefWidth="460.0">
+        <TextField fx:id="generatedPasswordField" editable="false" layoutX="81.0" layoutY="246.0" prefHeight="36.0" prefWidth="296.0" />
+        <Text layoutX="81.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Generated password:" />
+        <Button fx:id="generatePasswordButton" layoutX="149.0" layoutY="167.0" mnemonicParsing="false" onMouseClicked="#onGenerateButtonClick" prefHeight="36.0" prefWidth="163.0" text="Generate" />
+        <Text layoutX="84.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Length:" />
+        <CheckBox fx:id="shouldPasswordContainSpecialCharactersCheckBox" layoutX="158.0" layoutY="97.0" mnemonicParsing="false" text="Special characters can occur" />
+        <CheckBox fx:id="shouldPasswordContainLowercaseAndUppercaseLettersCheckBox" layoutX="158.0" layoutY="126.0" mnemonicParsing="false" text="Uppercase and lowercase characters can occur" />
+        <CheckBox fx:id="shouldPasswordContainNumbersCheckBox" layoutX="158.0" layoutY="67.0" mnemonicParsing="false" text="Numbers can occur" />
+        <TextField fx:id="passwordGeneratorPasswordLengthField" layoutX="83.0" layoutY="30.0" onKeyTyped="#onLengthInput" prefHeight="26.0" prefWidth="296.0" />
+      <Button fx:id="savePasswordButton" layoutX="168.0" layoutY="307.0" mnemonicParsing="false" onMouseClicked="#onSavePasswordButtonClick" prefHeight="26.0" prefWidth="122.0" text="Save" />
+      <TextField fx:id="passwordGeneratorErrorTextField" editable="false" layoutX="42.0" layoutY="399.0" prefHeight="26.0" prefWidth="377.0" />
+      <Button fx:id="savedPasswordsButton" layoutX="168.0" layoutY="341.0" mnemonicParsing="false" onMouseClicked="#onSavedPasswordsButtonClick" prefHeight="36.0" prefWidth="122.0" text="Saved passwords" />
+      <Button fx:id="changePasswordButton" layoutX="167.0" layoutY="433.0" mnemonicParsing="false" onMouseClicked="#onChangePasswordButtonClick" prefHeight="26.0" prefWidth="126.0" text="Change password" />
+      <TextField fx:id="passwordGeneratorTagTextField" layoutX="93.0" layoutY="306.0" prefHeight="26.0" prefWidth="70.0" />
+      <Text layoutX="93.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tag:" />
     </AnchorPane>
 </VBox>
