--- a/src/main/resources/com/example/passwordhamster/saved-passwords-view.fxml
+++ b/src/main/resources/com/example/passwordhamster/saved-passwords-view.fxml
@@ -11,11 +11,18 @@
    <children>
       <AnchorPane prefHeight="442.0" prefWidth="666.0">
          <children>
-            <TextArea fx:id="savedPasswordsTextArea" editable="false" layoutX="31.0" layoutY="32.0" prefHeight="400.0" prefWidth="335.0" />
-            <TextField fx:id="passwordToDeleteTextField" layoutX="410.0" layoutY="59.0" prefHeight="26.0" prefWidth="221.0" />
-            <Text layoutX="410.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type a password you want to delete" wrappingWidth="194.39999389648438" />
-            <Button fx:id="deletePasswordButton" layoutX="465.0" layoutY="93.0" mnemonicParsing="false" onMouseClicked="#onSavedPasswordsDeleteButtonClick" prefHeight="26.0" prefWidth="110.0" text="Delete" />
-            <TextField fx:id="savedPasswordsErrorTextField" editable="false" layoutX="457.0" layoutY="403.0" prefHeight="26.0" prefWidth="194.0" />
+            <TextArea fx:id="savedPasswordsTextArea" editable="false" layoutX="31.0" layoutY="32.0" prefHeight="314.0" prefWidth="335.0" />
+            <TextField fx:id="passwordToDeleteTextField" layoutX="411.0" layoutY="315.0" prefHeight="26.0" prefWidth="221.0" />
+            <Text layoutX="410.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Paste the line you want to delete" wrappingWidth="210.39987182617188" />
+            <Button fx:id="deletePasswordButton" layoutX="466.0" layoutY="349.0" mnemonicParsing="false" onMouseClicked="#onSavedPasswordsDeleteButtonClick" prefHeight="26.0" prefWidth="110.0" text="Delete" />
+            <TextField fx:id="savedPasswordsErrorTextField" editable="false" layoutX="424.0" layoutY="401.0" prefHeight="26.0" prefWidth="194.0" />
+            <TextField fx:id="savedPasswordsCustomPasswordPasswordTextField" layoutX="410.0" layoutY="70.0" prefHeight="26.0" prefWidth="222.0" />
+            <TextField fx:id="savedPasswordsCustomPasswordTagTextField" layoutX="410.0" layoutY="134.0" prefHeight="26.0" prefWidth="222.0" />
+            <Text layoutX="462.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add custom password" />
+            <Text layoutX="411.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tag:" />
+            <Button fx:id="savedPasswordsAddCustomPasswordButton" layoutX="462.0" layoutY="178.0" mnemonicParsing="false" onMouseClicked="#onSavedPasswordsAddCustomPasswordButtonClick" prefHeight="26.0" prefWidth="118.0" text="Add" />
+            <Text layoutX="413.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" />
+            <Button fx:id="savedPasswordsRefreshButton" layoutX="139.0" layoutY="355.0" mnemonicParsing="false" onMouseClicked="#onSavedPasswordsRefreshButtonClick" prefHeight="39.0" prefWidth="118.0" text="Refresh" />
          </children>
       </AnchorPane>
    </children>
